tests/miniJava/neg/003557_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( Main ) { } else { } } }
